--- a/_posts/2020-10-09-CSI3108-01.md
+++ b/_posts/2020-10-09-CSI3108-01.md
@@ -8,9 +8,8 @@ author: Yu Bin
 noindex: false
 ---
 
-<div style=" background-color: gold; padding:10px; width: 400px; height: auto; cursor: pointer;" onclick="location.href='https://www.google.com/';"
-Viewer
->
-CSI3108-01 데이터베이스 페이지로 이동하시려면 
-여기를 클릭해주세요.
-</div>
+<p>
+   <a href="http://ysweb.yonsei.ac.kr:8888/curri120601/curri_pop2.jsp?domain=H1&startyy=2020&hakgi=2&hakno=CSI3105&bb=01&sbb=00">
+   Syllabus
+   </a>
+</p>
