--- a/_posts/2020-10-09-MEU4300-01.md
+++ b/_posts/2020-10-09-MEU4300-01.md
@@ -3,7 +3,7 @@ layout: post
 title: MEU4300-01 Creative Product Design
 year: 2020
 description: >
-  
+category: course 
 author: Yu Bin
 noindex: false
 ---
