--- a/_posts/2021-02-06-MEU3300-01.md
+++ b/_posts/2021-02-06-MEU3300-01.md
@@ -3,7 +3,7 @@ layout: post
 title: MEU3300-01 Creative Design Project (2)
 year: 2020
 description: >
-  
+category: course
 author: Yu Bin
 noindex: false
 ---
