--- a/_posts/2021-02-06-YCS1005-01.md
+++ b/_posts/2021-02-06-YCS1005-01.md
@@ -3,7 +3,7 @@ layout: post
 title: YCS1005-01 ICT INDUSTRY LINKED PROJECT
 year: 2020
 description: >
-  
+category: course  
 author: Yu Bin
 noindex: false
 ---
