--- a/_posts/2021-11-12-LeetCode239.md
+++ b/_posts/2021-11-12-LeetCode239.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LeetCode 239. Sliding Window Maximum
+title: LeetCode 239번 - Sliding Window Maximum [Python]
 year: 2021.11.12
 description: >
 author: Y.B.KIM
