--- a/_posts/2021-11-12-LeetCode9.md
+++ b/_posts/2021-11-12-LeetCode9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LeetCode 9 - Palindrome Number [Python]
+title: LeetCode 9번 - Palindrome Number [Python]
 year: 2021.11.12
 description: >
 author: Y.B.KIM
