--- a/_posts/2021-11-12-LeetCode66.md
+++ b/_posts/2021-11-12-LeetCode66.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LeetCode 66 - Plus One [Python]
+title: LeetCode 66번 - Plus One [Python]
 year: 2021.11.12
 description: >
 author: Y.B.KIM
